--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2011-05-16 CERDAN Yohann  <cerdanyohann@yahoo.fr>
+	* Change addCss & addJs for a USER_INT plugin
+2011-05-16 CERDAN Yohann  <cerdanyohann@yahoo.fr>
 	* Add class.tx_t3devapi_pibase.php
 2011-04-28 CERDAN Yohann  <cerdanyohann@yahoo.fr>
     * Small updates
