Commit to TER version 0.4.9
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/t3devapi/trunk@50172 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2011-07-27 CERDAN Yohann  <cerdanyohann@yahoo.fr>
+	* Small refactoring
 2011-05-16 CERDAN Yohann  <cerdanyohann@yahoo.fr>
 	* Change addCss & addJs for a USER_INT plugin
 2011-05-16 CERDAN Yohann  <cerdanyohann@yahoo.fr>
