--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2011-09-27 CERDAN Yohann <cerdanyohann@yahoo.fr>
+	* Some improvements
+2011-09-27 CERDAN Yohann <cerdanyohann@yahoo.fr>
+	* Add Link helper
+2011-09-08 CERDAN Yohann  <cerdanyohann@yahoo.fr>
+	* Add a helpers section in the templating system
+	* Refactoring in the template section
+2011-09-07 CERDAN Yohann  <cerdanyohann@yahoo.fr>
+	* Add a TCA section, with a GMap render
+	* Improvements on addCss & addJs
+2011-08-24 CERDAN Yohann  <cerdanyohann@yahoo.fr>
+	* Improvements on displayList & displaySingle
 2011-07-27 CERDAN Yohann  <cerdanyohann@yahoo.fr>
 	* Small refactoring
 2011-05-16 CERDAN Yohann  <cerdanyohann@yahoo.fr>
