* Commit to TER version 0.4.18
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/t3devapi/trunk@55168 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-11-04 CERDAN Yohann <cerdanyohann@yahoo.fr>
+	* Refactoring of the html section
+	* add class.tx_t3devapi_tagbuilder.php to build html tags
+	* add class.tx_t3devapi_validate.php to validate fields
+	* Implements some tests for phpunit
+	* Some improvements
 2011-09-27 CERDAN Yohann <cerdanyohann@yahoo.fr>
 	* Some improvements
 2011-09-27 CERDAN Yohann <cerdanyohann@yahoo.fr>
