Another refactoring and cleaning update = TER version 0.5.0
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/t3devapi/trunk@61150 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2012-04-23 CERDAN Yohann <cerdanyohann@yahoo.fr>
+	* another refactoring and cleaning update
 2012-04-10 CERDAN Yohann <cerdanyohann@yahoo.fr>
 	* add new stuff in pibase
 	* add profiling with xhprof
